# tftools

./: .gitignore  README.md  pyproject.toml
docs/: Manual-tftools.md
src/tftools/: __init__.py  api.py  booknm.py  core.py  datasets.py  getver.py  nb.py  nbstrip.py  refs.py  tfio.py
